Modifico estructura basica y estilos

--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/untref-school-logo.jpg" type="image/x-icon">
     <title>UNTREF School</title>
 </head>
 <body>
     <header>
-        <div>
-            <img src="" alt="logo-untref-school">
-        </div>
+        <section class="logo">
+            <div class="logo__imagen">
+                <img src="./img/untref-school-logo.jpg" alt="logo-untref-school">
+            </div>
+            <div class="logo__titulo">
+                <span class="logo__titulo--untref">UNTREF</span>
+                <span class="logo__titulo--school">School</span>
+            </div>
+        </section>
         <nav class="navbar">
+            <div class="menu-icon">
+                PONER ICONO MENU HAMBURGUESA
+            </div>
             <section>
                 Contacto | Mapa del sitio | Idioma del sitio (hacer desplegable) - - - Barra de búsqueda
             </section>
-            <section>
-                <ul class="navbar-items">
+            <nav>
+                <ul class="navbar__item">
                     <a href="#" id="item--nosotros">Quienes somos</a> 
                     <a href="#" id="item--propuesta">¿Por qué elegirnos?</a>
                     <a href="#" id="item--planEducativo">Propuesta educativa</a>
                     <a href="#" id="item--noticias">Últimas noticias</a>
                 </ul>
-            </section>
+            </nav>
         </nav>
     </header>
     <main>
