--- a/index.html
+++ b/index.html
@@ -9,34 +9,21 @@
 </head>
 <body>
     <header>
-        <section class="logo">
-            <div class="logo__imagen">
-                <img src="./img/untref-school-logo.jpg" alt="logo-untref-school">
-            </div>
-            <div class="logo__titulo">
-                <span class="logo__titulo--untref">UNTREF</span>
-                <span class="logo__titulo--school">School</span>
-            </div>
-        </section>
+        <div class="header__logo">
+            <img src="./img/untref-school-logo.jpg" alt="logo-untref-school">
+            <h1>
+                <span>UNTREF</span>
+                <span>School</span>
+            </h1>
+        </div>
         <nav class="navbar">
             <div class="menu-icon">
-                PONER ICONO MENU HAMBURGUESA
+                <img src="./img/flecha-menu.png"></img>
             </div>
-            <section>
-                Contacto | Mapa del sitio | Idioma del sitio (hacer desplegable) - - - Barra de búsqueda
-            </section>
-            <nav>
-                <ul class="navbar__item">
-                    <a href="#" id="item--nosotros">Quienes somos</a> 
-                    <a href="#" id="item--propuesta">¿Por qué elegirnos?</a>
-                    <a href="#" id="item--planEducativo">Propuesta educativa</a>
-                    <a href="#" id="item--noticias">Últimas noticias</a>
-                </ul>
-            </nav>
         </nav>
     </header>
     <main>
-        <h1>BANNER O LINEA DE SEPARACIÓN CON IMAGEN</h1>
+        <h2>BANNER O LINEA DE SEPARACIÓN CON IMAGEN</h2>
         <article>
             <section>
                 <h2>Quienes somos</h2>
@@ -65,7 +52,12 @@
             <a href="">TikTok</a>
         </section>
         <section>
-            <div><p>UNTREF School</p></div>
+            <div class="footer__logo">
+                <h1>
+                    <span>UNTREF</span>
+                    <span>School</span>
+                </h1>
+            </div>
             <div>MAPA DEL SITIO CENTRADO, con dirección abajo</div>
         </section>
         <section>
