--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="navbar">
             <div class="menu-icon">
-                <img src="./img/flecha-menu.png"></img>
+                <a href=""><img src="./img/flecha-menu.png"></img></a>
             </div>
         </nav>
     </header>
@@ -44,25 +44,31 @@
         </article>
     </main>
     <footer>
-        <section>
-            Redes:
-            <a href="">Facebook</a>
-            <a href="">Instagram</a>
-            <a href="">Threads</a>
-            <a href="">TikTok</a>
-        </section>
-        <section>
+        <div class="redes">
+            <a href=""><img src="./img/facebook.png" alt="Facebook"></a>
+            <a href=""><img src="./img/instagram.png" alt="Instagram"></a>
+            <a href=""><img src="./img/threads.png" alt="Threads"></a>
+            <a href=""><img src="./img/tiktok.png" alt="TikTok"></a>
+        </div>
+        <section class="footer">
             <div class="footer__logo">
                 <h1>
                     <span>UNTREF</span>
                     <span>School</span>
                 </h1>
             </div>
-            <div>MAPA DEL SITIO CENTRADO, con dirección abajo</div>
+            <div class="footer__ubicacion-mapa">
+                <h2>INSERTAR MAPA DEL SITIO CENTRADO</h2>
+            </div>
+            <div class="footer__ubicacion-direccion">
+                <p>Insertar dirección del sitio en texto</p>
+            </div>
         </section>
-        <section>
-            CONTACTO
-        </section>
+        <div class="contacto">
+            <a href=""><img src="./img/phone-call.png" alt="Llamadas"></a>
+            <a href=""><img src="./img/whatsapp.png" alt="Whatsapp"></a>
+            <a href=""><img src="./img/mail.png" alt="mail"></a>
+        </div>
     </footer>
 </body>
 </html>
