--- a/index.html
+++ b/index.html
@@ -44,12 +44,6 @@
         </article>
     </main>
     <footer>
-        <section class="footer__redes">
-            <a href=""><img src="./img/facebook.png" alt="Facebook"></a>
-            <a href=""><img src="./img/instagram.png" alt="Instagram"></a>
-            <a href=""><img src="./img/threads.png" alt="Threads"></a>
-            <a href=""><img src="./img/tiktok.png" alt="TikTok"></a>
-        </section>
         <section class="footer__ubicacion">
             <div class="footer__ubicacion-logo">
                 <h1>
@@ -61,15 +55,16 @@
                 <figure>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13135.861366641207!2d-58.5643367!3d-34.6050379!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacb9f8ff113%3A0x22fd08da6711928d!2sUniversidad%20Nacional%20de%20Tres%20de%20Febrero%20-%20Sede%20Caseros%20I!5e0!3m2!1ses!2sar!4v1689560559273!5m2!1ses!2sar" width="350" height="200" style="border: 1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <figcaption>
-                        <p>Valentín Gómez 4828 38, Caseros, Provincia de Buenos Aires</p>
+                        <p>Valentín Gómez 4828/38, Caseros, Provincia de Buenos Aires</p>
                     </figcaption>
                 </figure>
             </div>
         </section>
-        <section class="footer__contacto">
-            <a href=""><img src="./img/phone-call.png" alt="Llamadas"></a>
-            <a href=""><img src="./img/whatsapp.png" alt="Whatsapp"></a>
-            <a href=""><img src="./img/mail.png" alt="mail"></a>
+        <section class="footer__redes">
+            <a href="/untrefschool"><img src="./img/facebook.png" alt="Facebook"></a>
+            <a href="/untrefschool"><img src="./img/instagram.png" alt="Instagram"></a>
+            <a href="/untrefschool"><img src="./img/threads.png" alt="Threads"></a>
+            <a href="/untrefschool"><img src="./img/tiktok.png" alt="TikTok"></a>
         </section>
     </footer>
 </body>
