agrego info de main section

--- a/index.html
+++ b/index.html
@@ -23,24 +23,37 @@
         </nav>
     </header>
     <main>
-        <h2>BANNER O LINEA DE SEPARACIÓN CON IMAGEN</h2>
-        <article>
-            <section>
+        <article class="cards">
+            <section class="card nosotros">
                 <h2>Quienes somos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fuga nesciunt aliquam blanditiis et, aperiam accusamus sequi eos tempora repudiandae fugiat obcaecati in. Officiis tempora ipsam repellat iusto beatae nobis vitae autem ad, minima voluptates animi debitis, ratione nihil ipsa officia! Expedita quis, pariatur distinctio corrupti eum unde facere quisquam.</p>
+                <p>Desde que arrancó en el 92, UNTREF SCHOOL se volvió una escuela que la rompe en educación. Fue creada por un grupete de padres y maestros re jugados que querían armar un lugar piola para aprender. Los profe están re metidos y siempre ponen toda la ficha para ayudar a cada pibe a dar lo mejor de sí.</p>
+                <p>En UNTREF SCHOOL, cada uno es un mundo aparte, y esto está de diez. La movida es que los pibes crezcan y se desarrollen al mango, cada uno a su estilo. Nos re caben los proyectos en equipo, compartir ideas y sumar experiencias, como tambien el crecimiento individual de cada pibe y lo festejamos a full. Promovemos que se la re banquen con el pensamiento crítico, la creatividad y el liderazgo.</p>
+                <p>¡Juntos le damos forma a un futuro brillante para cada pibe, donde puedan mandarse de lleno en la vida adulta!</p>
             </section>
-            <section>
+            <section class="card motivos">
                 <h2>¿Por qué elegirnos?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fuga nesciunt aliquam blanditiis et, aperiam accusamus sequi eos tempora repudiandae fugiat obcaecati in. Officiis tempora ipsam repellat iusto beatae nobis vitae autem ad, minima voluptates animi debitis, ratione nihil ipsa officia! Expedita quis, pariatur distinctio corrupti eum unde facere quisquam.</p>
+                <p>Si sos un padre que busca la mejor educación para tu pibe, te tengo unas razones de peso por las que deberías elegir UNTREF SCHOOL:</p>
+                <p>En UNTREF SCHOOL, nos comprometemos con la calidad: Nuestros profes están siempre en la suya, dándole a tu chico una educación de primer nivel. Queremos que tu pibe se mande todas y saque su máximo potencial, así que nos ponemos la 10 para que eso pase.</p>
+                <p>Somos una escuela que le pone onda a la diversidad: Acá, cada chico es un mundo, con sus talentos y su propio ritmo. Respetamos las diferencias y adaptamos la enseñanza a las necesidades de cada uno. Tu guacho va a sentirse aceptado y valorado tal como es, ¡sin vueltas!</p>
+                <p>No todo es estudiar: En UNTREF SCHOOL, le damos a tu pibe una experiencia educativa completa. Hay actividades re copadas, proyectos emocionantes y salidas piolas para que aprendan de forma divertida y se enganchen con la escuela. Queremos que disfruten mientras crecen.</p>
+                <p>Elegirnos a nosotros es elegir una educación posta, donde tu pibe va a ser respetado, desafiado y va a pasarla bien.</p>
+                <p>¡Vení a UNTREF SCHOOL y dale a tu guacho el camino hacia un futuro brillante!</p>
             </section>
-            <section>
+            <section class="card propuesta">
                 <h2>Propuesta educativa</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fuga nesciunt aliquam blanditiis et, aperiam accusamus sequi eos tempora repudiandae fugiat obcaecati in. Officiis tempora ipsam repellat iusto beatae nobis vitae autem ad, minima voluptates animi debitis, ratione nihil ipsa officia! Expedita quis, pariatur distinctio corrupti eum unde facere quisquam.</p>
+                <p><span class="subtitulo">Cada pibe es un mundo:</span> Valoramos que cada uno tenga su propia estilo y ritmo de aprendizaje. Adaptamos la enseñanza a sus necesidades y habilidades para que se sientan en su salsa y saquen todo su potencial.</p>
+                <p><span class="subtitulo">Actividades copadas:</span> En UNTREF SCHOOL, no todo es estudiar en el aula, ¡qué embole! Les damos chances de vivir experiencias re piolas y prácticas. Salidas, proyectos emocionantes y actividades fuera del cole para que se enganchen y aprendan de forma divertida.</p>
+                <p><span class="subtitulo">Hacemos pensadores:</span> Nos la re jugamos en desarrollar el pensamiento crítico de los chicos. Los desafiamos a pensar por sí mismos, a cuestionar y a buscar respuestas. Queremos que sean unos capos en el mundo real y que se manden a la vida sin miedo.</p>
             </section>
-            <section>
+            <aside class="card noticias">
                 <h2>Últimas noticias</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fuga nesciunt aliquam blanditiis et, aperiam accusamus sequi eos tempora repudiandae fugiat obcaecati in. Officiis tempora ipsam repellat iusto beatae nobis vitae autem ad, minima voluptates animi debitis, ratione nihil ipsa officia! Expedita quis, pariatur distinctio corrupti eum unde facere quisquam.</p>
-            </section>
+                <p>Últimas noticias en UNTREF SCHOOL, ¡la posta de la educación!</p>
+                <p><span class="subtitulo">¡Festejamos el Día del Libro! -</span> En UNTREF SCHOOL nos mandamos una movida re copada para celebrar el Día del Libro. Los pibes se engancharon en actividades de lectura, compartieron sus historias preferidas y se mandaron una sesión literaria que estuvo impecable. ¡La magia de los libros se hizo sentir en nuestra escuela!</p>
+                <p><span class="subtitulo">¡Premio al proyectazo científico! -</span> Queremos contarles que un grupo de alumnos de UNTREF SCHOOL se llevó el premio gordo en una competencia nacional por su proyecto científico. La investigación sobre energías renovables y su presentación dejaron a todos con la boca abierta. ¡Felicitamos a estos genios por su dedicación y pasión por la ciencia!</p>
+                <p><span class="subtitulo">Excursión al Museo de Artes que voló cabezas -</span> Los pibes de UNTREF SCHOOL se la re bancaron en una excursión al Museo de Arte de la city. Se mandaron una experiencia única, exploraron obras de artistas re conocidos y se inspiraron una bocha. Fue una movida que dejó huella y les abrió la cabeza al arte como nunca antes.</p>
+                <p><span class="subtitulo">Una fiesta deportiva -</span> En un clima de buena onda y pura diversión, armamos una jornada deportiva de integración para todos los pibes de UNTREF SCHOOL. Se mandaron en juegos y actividades deportivas, fomentando la unión, el compañerismo y la diversión sana. ¡Fue una experiencia que quedó en el recuerdo de todos!</p>
+                <p>Estas son solo algunas de las últimas noticias que se mandaron en UNTREF SCHOOL, ¡donde siempre hay acción y cosas emocionantes pasando! ¡Estén atentos porque viene todavía queda hilo en el carretel!</p>
+            </aside>
         </article>
     </main>
     <footer>
