SEO + endpoint form

--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,13 @@
             href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
         />
         <link rel="stylesheet" href="./css/contact-style.css" />
+        <meta
+            name="description"
+            content="Formulario de contacto de la escuela primaria 'UNTREF School'"
+        />
+        <meta name="author" content="Farinello, Nicolas" />
 
-        <title>Contacto</title>
+        <title>UNTREF School - Contacto</title>
     </head>
     <body>
         <section id="contact">
@@ -21,8 +26,13 @@
 
             <div class="contact-wrapper">
                 <!-- Left contact page -->
-
-                <form id="contact-form" class="form-horizontal" role="form">
+                <form
+                    action="https://formsubmit.co/farinello.gg@gmail.com"
+                    method="POST"
+                    id="contact-form"
+                    class="form-horizontal"
+                    role="form"
+                >
                     <div class="form-group">
                         <div class="col-sm-12">
                             <input
