--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             href="./img/logo/untref-school-logo.jpg"
             type="image/x-icon"
         />
+        <meta
+            name="description"
+            content="Sitio web de la escuela primaria 'UNTREF School'"
+        />
+        <meta name="author" content="Farinello, Nicolas" />
         <title>UNTREF School</title>
     </head>
     <body>
