prueba commit pc

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                                 Excursión al Museo de Artes
                             </h5>
                             <p class="card-text">
-                                Una experiencia única. Fue una movida que dejó
+                                Una experiencia única. <br>
+                                Fue una movida que dejó
                                 huellas y les abrió la cabeza al arte como nunca
                                 antes, explorando obras de artistas súper
                                 reconocidos, que los inspiraron un montón.
