--- a/index.html
+++ b/index.html
@@ -39,98 +39,115 @@
             </nav>
         </header>
         <main>
-            <article class="cards">
-                <section class="card card-nosotros">
-                    <h2>Quienes somos</h2>
-                    <p>
-                        Desde que arrancó en el 92, UNTREF SCHOOL se volvió una
-                        escuela que la rompe en educación. Fue creada por un
-                        grupete de padres y maestros re jugados que querían
-                        armar un lugar piola para aprender. Los profe están re
-                        metidos y siempre ponen toda la ficha para ayudar a cada
-                        pibe a dar lo mejor de sí.
-                    </p>
-                    <p>
-                        En UNTREF SCHOOL, cada uno es un mundo aparte, y esto
-                        está de diez. La movida es que los pibes crezcan y se
-                        desarrollen al mango, cada uno a su estilo. Nos re caben
-                        los proyectos en equipo, compartir ideas y sumar
-                        experiencias, como tambien el crecimiento individual de
-                        cada pibe y lo festejamos a full. Promovemos que se la
-                        re banquen con el pensamiento crítico, la creatividad y
-                        el liderazgo.
-                    </p>
-                    <p>
-                        ¡Juntos le damos forma a un futuro brillante para cada
-                        pibe, donde puedan mandarse de lleno en la vida adulta!
-                    </p>
-                </section>
-                <section class="card card-motivos">
-                    <h2>¿Por qué elegirnos?</h2>
-                    <p>
-                        Si sos un padre que busca la mejor educación para tu
-                        pibe, te tengo unas razones de peso por las que deberías
-                        elegir UNTREF SCHOOL:
-                    </p>
-                    <p>
-                        En UNTREF SCHOOL, nos comprometemos con la calidad:
-                        Nuestros profes están siempre en la suya, dándole a tu
-                        chico una educación de primer nivel. Queremos que tu
-                        pibe se mande todas y saque su máximo potencial, así que
-                        nos ponemos la 10 para que eso pase.
-                    </p>
-                    <p>
-                        Somos una escuela que le pone onda a la diversidad: Acá,
-                        cada chico es un mundo, con sus talentos y su propio
-                        ritmo. Respetamos las diferencias y adaptamos la
-                        enseñanza a las necesidades de cada uno. Tu guacho va a
-                        sentirse aceptado y valorado tal como es, ¡sin vueltas!
-                    </p>
-                    <p>
-                        No todo es estudiar: En UNTREF SCHOOL, le damos a tu
-                        pibe una experiencia educativa completa. Hay actividades
-                        re copadas, proyectos emocionantes y salidas piolas para
-                        que aprendan de forma divertida y se enganchen con la
-                        escuela. Queremos que disfruten mientras crecen.
-                    </p>
-                    <p>
-                        Elegirnos a nosotros es elegir una educación posta,
-                        donde tu pibe va a ser respetado, desafiado y va a
-                        pasarla bien.
-                    </p>
-                    <p>
-                        ¡Vení a UNTREF SCHOOL y dale a tu guacho el camino hacia
-                        un futuro brillante!
-                    </p>
-                </section>
-                <section class="card card-propuesta">
-                    <h2>Propuesta educativa</h2>
-                    <p>
-                        <span class="subtitulo">Cada pibe es un mundo:</span>
-                        Valoramos que cada uno tenga su propia estilo y ritmo de
-                        aprendizaje. Adaptamos la enseñanza a sus necesidades y
-                        habilidades para que se sientan en su salsa y saquen
-                        todo su potencial.
-                    </p>
-                    <p>
-                        <span class="subtitulo">Actividades copadas:</span> En
-                        UNTREF SCHOOL, no todo es estudiar en el aula, ¡qué
-                        embole! Les damos chances de vivir experiencias re
-                        piolas y prácticas. Salidas, proyectos emocionantes y
-                        actividades fuera del cole para que se enganchen y
-                        aprendan de forma divertida.
-                    </p>
-                    <p>
-                        <span class="subtitulo">Hacemos pensadores:</span> Nos
-                        la re jugamos en desarrollar el pensamiento crítico de
-                        los chicos. Los desafiamos a pensar por sí mismos, a
-                        cuestionar y a buscar respuestas. Queremos que sean unos
-                        capos en el mundo real y que se manden a la vida sin
-                        miedo.
-                    </p>
-                </section>
+            <section class="cards">
+                <article class="card card-nosotros">
+                    <div class="card text-center">
+                        <h2 id="card-header">Quiénes somos</h2>
+                        <div class="card-body">
+                            <p class="card-text">
+                                Fundada en el 92, por un grupo de padres y
+                                maestros que querían armar un lugar copado para
+                                aprender, UNTREF school es una escuela que la
+                                rompe en todo lo relacionado con la educación.
+                                Tomamos muy en serio el aprendizaje de nuestros
+                                pibes y es por eso que los profes están re
+                                metidos y siempre le ponen toda la onda para
+                                ayudar a cada uno para que se desarrollen al
+                                mango y puedan dar lo mejor de sí. Estamos
+                                convencidos de que promover el pensamiento
+                                crítico, la creatividad y el liderazgo es parte
+                                fundamental para el buen desarrollo intelectual
+                                que los entrene para dominar el futuro que
+                                tienen por delante.
+                            </p>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card card-motivos">
+                    <div class="card text-center">
+                        <h2 id="card-header">¿Por qué elegirnos?</h2>
+                        <div class="card-body">
+                            <p class="card-text"></p>
+                            <h5 class="card-title">
+                                Nos comprometemos con la calidad:
+                            </h5>
+                            <p class="card-text">
+                                Queremos que tu pibe alcance su máximo potencial
+                                y nos ponemos 'la 10' para que eso pase.
+                                Nuestros profes están siempre al pie del cañón,
+                                dándole a tu chico una educación de primer
+                                nivel.
+                            </p>
+
+                            <h5 class="card-title">
+                                Somos una escuela que le pone onda a la
+                                diversidad:
+                            </h5>
+                            <p class="card-text">
+                                Acá, cada chico es un mundo, con sus talentos y
+                                su propio ritmo. Respetamos las diferencias y
+                                adaptamos la enseñanza a las necesidades de cada
+                                uno.
+                            </p>
+
+                            <h5 class="card-title">No todo es estudiar:</h5>
+                            <p class="card-text">
+                                En UNTREF SCHOOL, le damos a tu pibe una
+                                experiencia educativa completa, con actividades
+                                copadas, proyectos emocionantes y salidas muy
+                                buenas para que aprendan de forma divertida y se
+                                enganchen con el cole. Hacemos que disfruten
+                                mientras crecen.
+                            </p>
+                            <hr />
+                            <br />
+                            <p class="card-text">
+                                ¡Vení a UNTREF SCHOOL y dale a tu pibe el camino
+                                hacia un futuro brillante!
+                            </p>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="card card-propuesta">
+                    <div class="card text-center">
+                        <h2 id="card-header">Propuesta educativa</h2>
+                        <div class="card-body">
+                            <h5 class="card-title">Cada pibe es un mundo:</h5>
+                            <p class="card-text">
+                                Valoramos que cada uno tenga su propia estilo y
+                                ritmo de aprendizaje.
+                                <br />
+                                Adaptamos la enseñanza a sus necesidades y
+                                habilidades para que se sientan en su salsa y
+                                saquen todo su potencial.
+                            </p>
+
+                            <h5 class="card-title">Actividades copadas:</h5>
+                            <p>
+                                En UNTREF SCHOOL, no todo es estudiar en el
+                                aula, ¡qué embole! Les damos chances de vivir
+                                experiencias re piolas y prácticas.
+                                <br />
+                                Salidas, proyectos emocionantes y actividades
+                                fuera del cole para que se enganchen y aprendan
+                                de forma divertida.
+                            </p>
+
+                            <h5 class="card-title">Hacemos pensadores:</h5>
+                            <p>
+                                Nos la re jugamos en desarrollar el pensamiento
+                                crítico de los chicos. Los desafiamos a pensar
+                                por sí mismos, a cuestionar y a buscar
+                                respuestas. Queremos que sean unos capos en el
+                                mundo real y que se manden a la vida sin miedo.
+                            </p>
+                        </div>
+                    </div>
+                </article>
                 <aside class="cards">
-                    <h4 id="card-header">ÚLTIMAS NOTICIAS</h4>
+                    <h4 id="header-noticias">ÚLTIMAS NOTICIAS</h4>
                     <div class="card text-center">
                         <div class="card-body">
                             <h5 class="card-title">
@@ -154,11 +171,11 @@
                                 Excursión al Museo de Artes
                             </h5>
                             <p class="card-text">
-                                Una experiencia única. <br>
-                                Fue una movida que dejó
-                                huellas y les abrió la cabeza al arte como nunca
-                                antes, explorando obras de artistas súper
-                                reconocidos, que los inspiraron un montón.
+                                Una experiencia única. <br />
+                                Fue una movida que dejó huellas y les abrió la
+                                cabeza al arte como nunca antes, explorando
+                                obras de artistas súper reconocidos, que los
+                                inspiraron un montón.
                             </p>
                             <a href="#" class="btn btn-primary">Leer noticia</a>
                         </div>
@@ -181,7 +198,7 @@
                         <div class="card-footer">Hace 31 días</div>
                     </div>
                 </aside>
-            </article>
+            </section>
         </main>
         <footer>
             <section class="footer__ubicacion">
