--- a/index.html
+++ b/index.html
@@ -39,20 +39,34 @@
                 </h1>
             </div>
             <nav class="navbar">
-                <div class="menu-icon">
-                    <a href=""
-                        ><img
-                            src="./img/menu/flecha-menu.png"
-                            alt="menu-extraible"
-                    /></a>
-                </div>
+                <ul class="nav items">
+                    <li class="item item-nosotros">
+                        <i class="fa-solid fa-school"></i>
+                        <a href="#nosotros">Quiénes somos</a>
+                    </li>
+                    <li class="item item-motivos">
+                        <i class="fa-solid fa-award"></i>
+                        <a href="#motivos">Por qué elegirnos?</a>
+                    </li>
+                    <li class="item item-propuesta">
+                        <i class="fa-solid fa-shapes"></i>
+                        <a href="#propuesta">Propuesta educativa</a>
+                    </li>
+                    <li class="item item-noticias">
+                        <i class="fa-solid fa-bell"></i>
+                        <a href="#noticias">Últimas noticias</a>
+                    </li>
+                    <li class="item item-contacto">
+                        <a href="./contact.html" class="btn btn-primary" target="_blank">Contacto</i></a>
+                    </li>
+                </ul>
             </nav>
         </header>
         <main>
             <section class="cards">
                 <article class="card card-nosotros">
                     <div class="card text-center">
-                        <h2 id="card-header">Quiénes somos</h2>
+                        <h2 id="nosotros">Quiénes somos</h2>
                         <div class="card-body">
                             <p class="card-text">
                                 Fundada en el 92, por un grupo de padres y
@@ -76,7 +90,7 @@
 
                 <article class="card card-motivos">
                     <div class="card text-center">
-                        <h2 id="card-header">¿Por qué elegirnos?</h2>
+                        <h2 id="motivos">¿Por qué elegirnos?</h2>
                         <div class="card-body">
                             <p class="card-text"></p>
                             <h5 class="card-title">
@@ -121,7 +135,7 @@
 
                 <article class="card card-propuesta">
                     <div class="card text-center">
-                        <h2 id="card-header">Propuesta educativa</h2>
+                        <h2 id="propuesta">Propuesta educativa</h2>
                         <div class="card-body">
                             <h5 class="card-title">Cada pibe es un mundo:</h5>
                             <p class="card-text">
@@ -156,7 +170,7 @@
                     </div>
                 </article>
                 <aside class="cards">
-                    <h4 id="header-noticias">ÚLTIMAS NOTICIAS</h4>
+                    <h4 id="noticias">ÚLTIMAS NOTICIAS</h4>
                     <div class="card text-center">
                         <div class="card-body">
                             <h5 class="card-title">
