--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <body>
         <header>
             <div class="header__logo">
-                <img
-                    src="./img/logo/untref-school-logo.jpg"
+                <img src="./img/logo/untref-school-logo.jpg"
                     alt="logo-untref-school"
                 />
                 <h1>
@@ -93,7 +92,7 @@
                         <h2 id="motivos">¿Por qué elegirnos?</h2>
                         <div class="card-body">
                             <p class="card-text"></p>
-                            <h5 class="card-title">
+                            <h5 class="card-subtitle">
                                 Nos comprometemos con la calidad:
                             </h5>
                             <p class="card-text">
@@ -104,7 +103,7 @@
                                 nivel.
                             </p>
 
-                            <h5 class="card-title">
+                            <h5 class="card-subtitle">
                                 Somos una escuela que le pone onda a la
                                 diversidad:
                             </h5>
@@ -115,7 +114,7 @@
                                 uno.
                             </p>
 
-                            <h5 class="card-title">No todo es estudiar:</h5>
+                            <h5 class="card-subtitle">No todo es estudiar:</h5>
                             <p class="card-text">
                                 En UNTREF SCHOOL, le damos a tu pibe una
                                 experiencia educativa completa, con actividades
@@ -137,7 +136,7 @@
                     <div class="card text-center">
                         <h2 id="propuesta">Propuesta educativa</h2>
                         <div class="card-body">
-                            <h5 class="card-title">Cada pibe es un mundo:</h5>
+                            <h5 class="card-subtitle">Cada pibe es un mundo:</h5>
                             <p class="card-text">
                                 Valoramos que cada uno tenga su propia estilo y
                                 ritmo de aprendizaje.
@@ -147,7 +146,7 @@
                                 saquen todo su potencial.
                             </p>
 
-                            <h5 class="card-title">Actividades copadas:</h5>
+                            <h5 class="card-subtitle">Actividades copadas:</h5>
                             <p>
                                 En UNTREF SCHOOL, no todo es estudiar en el
                                 aula, ¡qué embole! Les damos chances de vivir
@@ -158,7 +157,7 @@
                                 de forma divertida.
                             </p>
 
-                            <h5 class="card-title">Hacemos pensadores:</h5>
+                            <h5 class="card-subtitle">Hacemos pensadores:</h5>
                             <p>
                                 Nos la re jugamos en desarrollar el pensamiento
                                 crítico de los chicos. Los desafiamos a pensar
@@ -169,11 +168,11 @@
                         </div>
                     </div>
                 </article>
-                <aside class="cards">
+                <aside class="card card-noticias">
                     <h4 id="noticias">ÚLTIMAS NOTICIAS</h4>
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title">
+                            <h5 class="card-subtitle">
                                 ¡Festejamos el Día del Libro!
                             </h5>
                             <p class="card-text">
@@ -190,7 +189,7 @@
 
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title">
+                            <h5 class="card-subtitle">
                                 Excursión al Museo de Artes
                             </h5>
                             <p class="card-text">
@@ -204,10 +203,9 @@
                         </div>
                         <div class="card-footer">Hace 18 días</div>
                     </div>
-
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title">Una fiesta deportiva</h5>
+                            <h5 class="card-subtitle">Una fiesta deportiva</h5>
                             <p class="card-text">
                                 En un clima de buena onda y pura diversión,
                                 armamos una jornada deportiva de integración
