corrijo error estructura html

--- a/index.html
+++ b/index.html
@@ -168,8 +168,11 @@
                         </div>
                     </div>
                 </article>
-                <aside class="card card-noticias">
-                    <h4 id="noticias">ÚLTIMAS NOTICIAS</h4>
+            </section>
+
+            <aside class="cards">
+                <h2 id="noticias">ÚLTIMAS NOTICIAS</h2>
+                <article class="card card-noticias">
                     <div class="card text-center">
                         <div class="card-body">
                             <h5 class="card-subtitle">
@@ -186,7 +189,8 @@
                         </div>
                         <div class="card-footer">Hace 3 días</div>
                     </div>
-
+                </article>
+                <article class="card card-noticias">
                     <div class="card text-center">
                         <div class="card-body">
                             <h5 class="card-subtitle">
@@ -203,6 +207,9 @@
                         </div>
                         <div class="card-footer">Hace 18 días</div>
                     </div>
+                </article>
+
+                <article class="card card-noticias">
                     <div class="card text-center">
                         <div class="card-body">
                             <h5 class="card-subtitle">Una fiesta deportiva</h5>
@@ -218,9 +225,10 @@
                         </div>
                         <div class="card-footer">Hace 31 días</div>
                     </div>
-                </aside>
-            </section>
+                </article>
+            </aside>
         </main>
+
         <footer>
             <section class="footer-logo">
                 <div class="footer__ubicacion-logo">
