agrego header a pagina de contacto

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,18 @@
         <title>UNTREF School - Contacto</title>
     </head>
     <body>
+        <header>
+            <div class="header__logo">
+                <img src="./img/logo/untref-school-logo.jpg"
+                    alt="logo-untref-school"
+                />
+                <div>
+                    <span>UNTREF</span>
+                    <span>School</span>
+                </div>
+            </div>
+        </header>
+        <main>
         <section id="contact">
             <h1 class="section-header">Contacto</h1>
 
@@ -157,6 +169,7 @@
                         </li>
                     </ul>
                     <hr />
+                </main>
 
                     <div class="copyright">
                         &copy; Todos los derechos reservados a UNTREF SCHOOL
